feat: Implement admin-only delete endpoint
- Enabled Method Security in SecurityConfig
- Updated UserDetailsService to map DB roles to Spring Authorities
- Secured DELETE /api/sweets/{id} with @PreAuthorize('hasRole(\'ADMIN\')')

Co-authored-by: Gemini <gemini@google.com>